# v4l2

./: .gitignore  README.md
AndroidCamera/: readme.txt
AndroidCamera/app/: build.gradle
AndroidCamera/app/src/main/: AndroidManifest.xml
AndroidCamera/app/src/main/cpp/: CMakeLists.txt  bridge.c  bridge.h
AndroidCamera/app/src/main/res/anim/: focus_indicator.xml
AndroidCamera/app/src/main/res/drawable/: focus_indicator_bg.xml  icon_shutter.xml
AndroidCamera/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_test.xml
AndroidCamera/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
Android_ImageMagick7/: readme.txt
Android_ImageMagick7/lib/: README.md
AudioRecord/: readme.txt
AudioRecord/app/: build.gradle
AudioRecord/app/src/main/: AndroidManifest.xml
AudioRecord/gradle/wrapper/: gradle-wrapper.properties
CameraRecorder/: CameraRecorder.c  build.sh  capture.c  capture.h  config.h  readme.txt  slog.c  slog.h
FFMpegAndroid/app/: CMakeLists.txt  build.gradle
FFMpegAndroid/app/src/main/: AndroidManifest.xml
FFMpegAndroid/app/src/main/jni/: CMakeLists.txt  bridge.c
FFMpegAndroid/gradle/wrapper/: gradle-wrapper.properties
FileOp/: build.sh  file_op.c  readme.txt
HelloWorld/: makefile  readme.txt  v4l2.c
Lab/app/: build.gradle
Lab/app/src/main/: AndroidManifest.xml
Lab/app/src/main/res/layout/: activity_main.xml  (+1 more)
Lab/gradle/wrapper/: gradle-wrapper.properties
Libyuv/app/: build.gradle
Libyuv/app/src/main/cpp/: CMakeLists.txt  bridge.cpp
MiniFileExplorer/: .gitignore  readme.txt
MiniFileExplorer/app/: build.gradle
NV21-to-RGB/: readme.txt
Neon/: readme.txt
Neon/app/: build.gradle
Neon/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-libc.c
Neon/gradle/wrapper/: gradle-wrapper.properties
Trident/: readme.txt
Trident/app/: build.gradle
Trident/app/src/main/: AndroidManifest.xml
Trident/gradle/wrapper/: gradle-wrapper.properties
aac_encoder/: build.sh  fdk_aac.c  main.c  readme.txt
alsa/: readme.txt  simple_sound_recording.c
bitmap/: bitmap.c  makefile  readme.txt
common/: common.c  common.h  readme.txt
continuous/: continuous.c  makefile  readme.txt
hello264/: readme.txt
md5/: readme.txt
sdl2_display_yuyv_image/: main.cpp  readme.txt
sdl2_display_yuyv_image_linux/: build.sh  main.cpp  readme.txt
sdl2_display_yuyv_video/: main.cpp  readme.txt
simplest_ffmpeg_muxer/: build.sh  readme.txt  simplest_ffmpeg_muxer.c
simplest_h264_parser/: main.c  readme.txt
toy-queue/: queue.c  readme.txt
trident-server/: CMakeLists.txt  main.c  readme.txt  slog.c  slog.h
trident-server-java/: config.txt
trident-server-java/src/com/example/: Main.java  SLog.java  Util.java  Worker.java
wave/: readme.txt  wav.c
wavreader/: readme.txt
yuyv_to_h246/: makefile  readme.txt  simplest_x264_encoder.c
(+66 files in other folders)
